# trt

NVIDIA_CUDA-9.0_Samples/0_Simple/UnifiedMemoryStreams/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/asyncAPI/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/cdpSimplePrint/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/cdpSimpleQuicksort/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/clock/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/cppIntegration/: Makefile  cppIntegration
NVIDIA_CUDA-9.0_Samples/0_Simple/cppOverload/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/cudaOpenMP/: Makefile  cudaOpenMP
NVIDIA_CUDA-9.0_Samples/0_Simple/fp16ScalarProduct/: Makefile  fp16ScalarProduct
NVIDIA_CUDA-9.0_Samples/0_Simple/inlinePTX/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/matrixMul/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/matrixMulCUBLAS/: Makefile  matrixMulCUBLAS
NVIDIA_CUDA-9.0_Samples/0_Simple/matrixMulDrv/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/simpleAssert/: Makefile  simpleAssert
NVIDIA_CUDA-9.0_Samples/0_Simple/simpleAtomicIntrinsics/: Makefile  simpleAtomicIntrinsics
NVIDIA_CUDA-9.0_Samples/0_Simple/simpleCallback/: Makefile
NVIDIA_CUDA-9.0_Samples/0_Simple/simpleCooperativeGroups/: Makefile  simpleCooperativeGroups
NVIDIA_CUDA-9.0_Samples/0_Simple/simpleCubemapTexture/: Makefile  (+1 more)
customLayer/: CMakeLists.txt  common.cpp  common.h  main.cpp
customLayer/data/: model.uff  test.wt  weights.wt
samples/sampleMNISTAPI/: sampleMNISTAPI.cpp
samples/sampleUffMNIST/: sampleUffMNIST.cpp
test1/: CMakeLists.txt  main.cpp
test1/test/: test  test.cpp
(+184 files in other folders)
